Updated gitignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+config/initializers/secret_token.rb
 tmp/
 test/
 *.db
 *.sqlite3
 log/
+/.bundle
+/db/*.sqlite3
+/log/*.log
+/tmp
+config/database.yml
+config/google_analytics.yml
+.DS_Store
+/nbproject/
+public/assets/**
+config/secrets.yml
